(Fecha, Nombre, Paciente).js,  Fecha finalizado, Paciente faltó una funcion, Nombre Progresó

--- a/Index.html
+++ b/Index.html
@@ -4,12 +4,12 @@
 	<title>Index</title>
 	<meta charset="utf-8">
 	<link type="text/css" href="Style_NoSession.css" rel="stylesheet">
-	<script src="Nombre.js"></script>
 </head>
-<body oncontextmenu="return false" onkeydown="return false">
-<div clas="all">
+<body>
+	<script src="Nombre.js"></script>
+<!--	<div clas="all">
 
-
-</div class="all">
+	</div class="all">
+-->
 </body>
 </html>
