--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
 	<link type="text/css" href="Style_NoSession.css" rel="stylesheet">
 </head>
 <body>
-	<script src="Nombre.js"></script>
+	<script src="Main.js"></script>
 <!--	<div clas="all">
 
 	</div class="all">
